--- a/index.html
+++ b/index.html
@@ -7,26 +7,27 @@
 		<title>My Postcard</title>
 	</head>
 	<body>
-		<div>
+		<div class="principal">
 			<div class="cont1">
-				<h1 class="title">My POSTCARD</h1>
+				<h1 class="title">My Postcard</h1>
 				<img
 					src="https://storage.googleapis.com/breathecode-asset-images/5318bde604cf5c915f94897a71b49ab2523101322ea21cb046db1e67c24fa3be.png?raw=true"
 					alt="4geeks"
 				/>
 			</div>
-			<div>
-				<p>Look how awesome this is a postcard that i created using HTML5 and CSS3 during my 4geeks Academy Course</p>
-				<br />
-				<p>This is so cool, cant wait to start doing more stuff</p>
+			<div class="cont2">
+				<p class="p1">Look how awesome this is a postcard that i created using HTML5 and CSS3 during my 4geeks Academy Course</p>
 				<form>
 					<input type="text" id="fname" name="fname" value="Some Name" /><br />
 					<input type="text" id="lname" name="lname" value="Some Email" /><br />
 					<input type="text" value="Some comment" />
 				</form>
 			</div>
-			<div>
-				<button>Send My Postcard</button>
+			<div class="cont3">
+				<p class="p3">This is so cool, cant wait to start doing more stuff</p>
+			</div>
+			<div class="cont4">
+				<button type="submit">Send My Postcard</button>
 			</div>
 		</div>
 	</body>
