--- a/index.html
+++ b/index.html
@@ -7,28 +7,31 @@
 		<title>My Postcard</title>
 	</head>
 	<body>
-		<div class="principal">
-			<div class="cont1">
-				<h1 class="title">My Postcard</h1>
-				<img
-					src="https://storage.googleapis.com/breathecode-asset-images/5318bde604cf5c915f94897a71b49ab2523101322ea21cb046db1e67c24fa3be.png?raw=true"
-					alt="4geeks"
-				/>
-			</div>
-			<div class="cont2">
-				<p class="p1">Look how awesome this is a postcard that i created using HTML5 and CSS3 during my 4geeks Academy Course</p>
-				<form>
-					<input type="text" id="fname" name="fname" value="Some Name" /><br />
-					<input type="text" id="lname" name="lname" value="Some Email" /><br />
-					<input type="text" value="Some comment" />
-				</form>
-			</div>
-			<div class="cont3">
-				<p class="p3">This is so cool, cant wait to start doing more stuff</p>
-			</div>
-			<div class="cont4">
-				<button type="submit">Send My Postcard</button>
-			</div>
+		<div class="cont1">
+			<h1 class="title">My Postcard</h1>
+			<img
+				src="https://storage.googleapis.com/breathecode-asset-images/5318bde604cf5c915f94897a71b49ab2523101322ea21cb046db1e67c24fa3be.png?raw=true"
+				alt="4geeks"
+			/>
 		</div>
+		<div class="cont2">
+				<p>
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem amet soluta nesciunt neque doloremque porro a molestias quasi eius consequatur suscipit reprehenderit, rem eligendi cumque dicta ea explicabo. Ipsam, quas. 
+				<br>
+				<br>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+				</p>
+				<form action="">
+					<input type="text" value="Some Name"><br>
+					<input type="email" value="Some Email"><br>
+					<input type="tel" value="Some phone">
+				</form>
+		</div>
+		<div>
+			<button>
+				Send a message
+			</button>
+		</div>
+
 	</body>
 </html>
